--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </div>
 
   <!--Card 3: Temp Users-->  
-  <div class="card text-bg-danger text-white mb-3" style="max-width: 18rem;">
+  <div class="card text-bg-warning text-black3" style="max-width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">Temp Users</h5>
         <h1>10</h1>
@@ -85,7 +85,7 @@
   </div>
 
   <!--Card 4: Total User Accounts-->  
-  <div class="card text-bg-warning text-black " style="max-width: 18rem;">
+  <div class="card text-bg-warning text-black3" style="max-width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">Total Users</h5>
         <h1>20</h1>
